Fix operator installation issue and reorg outputs: 1, wait until kubeadmin login successful 2, output deployment template if app is not deployed 3, reorganize ARM template outputs
Signed-off-by: Jianguo Ma <jiangma@microsoft.com>

--- a/src/main/scripts/open-liberty-application.yaml.template
+++ b/src/main/scripts/open-liberty-application.yaml.template
@@ -20,4 +20,5 @@ metadata:
 spec:
   replicas: ${Application_Replicas}
   applicationImage: ${Application_Image}
+  pullPolicy: Always
   expose: true
