upgrade open-liberty-operator to 0.8.0
Signed-off-by: Jianguo Ma <jiangma@microsoft.com>

--- a/src/main/scripts/open-liberty-operator-subscription.yaml
+++ b/src/main/scripts/open-liberty-operator-subscription.yaml
@@ -4,9 +4,9 @@ metadata:
   name: open-liberty-certified
   namespace: openshift-operators
 spec:
-  channel: beta
+  channel: beta2
   installPlanApproval: Automatic
   name: open-liberty-certified
   source: certified-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: open-liberty-operator.v0.7.0
+  startingCSV: open-liberty-operator.v0.8.0
