--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>com.microsoft.azure.iaas</groupId>
         <artifactId>azure-javaee-iaas-parent</artifactId>
-        <version>1.0.18</version>
+        <version>1.0.19</version>
         <relativePath></relativePath>
     </parent>
     
@@ -36,9 +36,10 @@
         <git.repo>WASdev</git.repo>
         <artifactsLocationBase>https://raw.githubusercontent.com/${git.repo}/${project.artifactId}/${git.tag}</artifactsLocationBase>
         <test.parameters>-TestParameter '@{&quot;PasswordMinLength&quot;=6}'</test.parameters>
-        <azure.apiVersion>2020-06-01</azure.apiVersion>
+        <azure.apiVersion.deployments> 2021-04-01</azure.apiVersion.deployments>
+        <azure.apiVersion.virtualNetworks>2022-05-01</azure.apiVersion.virtualNetworks>
         <azure.apiVersion.vNetRoleAssignment>2018-09-01-preview</azure.apiVersion.vNetRoleAssignment>
-        <azure.apiVersion.aroCluster>2020-04-30</azure.apiVersion.aroCluster>
+        <azure.apiVersion.aroCluster>2022-04-01</azure.apiVersion.aroCluster>
         <azure.apiVersion.deploymentScript>2020-10-01</azure.apiVersion.deploymentScript>
         <!--Testing PID <customer.usage.attribution.id>pid-1a2a9b5a-6c82-42de-a938-9fdb6ffe8e55-partnercenter</customer.usage.attribution.id> -->
         <customer.usage.attribution.id>pid-8942a2f7-32d6-4b69-b504-4c2fb23fe059-partnercenter</customer.usage.attribution.id>
