--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>com.ibm.websphere.azure</groupId>
     <artifactId>azure.liberty.aro</artifactId>
-    <version>1.0.39</version>
+    <version>1.0.40</version>
     
     <parent>
         <groupId>com.microsoft.azure.iaas</groupId>
@@ -40,11 +40,12 @@
         <azure.apiVersion.virtualNetworks>2022-05-01</azure.apiVersion.virtualNetworks>
         <azure.apiVersion.vNetRoleAssignment>2018-09-01-preview</azure.apiVersion.vNetRoleAssignment>
         <azure.apiVersion.aroCluster>2022-04-01</azure.apiVersion.aroCluster>
+        <azure.apiVersion.roleAssignment>2022-04-01</azure.apiVersion.roleAssignment>
+        <azure.apiVersion.userAssignedIdentities>2021-09-30-preview</azure.apiVersion.userAssignedIdentities>
         <azure.apiVersion.deploymentScript>2020-10-01</azure.apiVersion.deploymentScript>
         <!--Testing PID <customer.usage.attribution.id>pid-1a2a9b5a-6c82-42de-a938-9fdb6ffe8e55-partnercenter</customer.usage.attribution.id> -->
         <customer.usage.attribution.id>pid-8942a2f7-32d6-4b69-b504-4c2fb23fe059-partnercenter</customer.usage.attribution.id>
         <aro.start>acdd32ed-5fab-54b6-8d5a-097ed3dcfcf2</aro.start>
         <aro.end>d9293179-8975-5587-b29f-8f09f2832c4f</aro.end>
-        <uamiHasAppAdminRole>true</uamiHasAppAdminRole>
     </properties>
 </project>
