--- a/src/main/scripts/open-liberty-operator-subscription.yaml
+++ b/src/main/scripts/open-liberty-operator-subscription.yaml
@@ -1,3 +1,5 @@
+# Copyright (c) IBM Corporation.
+# Copyright (c) Microsoft Corporation.
 #      Copyright (c) Microsoft Corporation.
 # 
 #  Licensed under the Apache License, Version 2.0 (the "License");
