--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -127,15 +127,6 @@ jobs:
             echo "Invalid value of appEndpoint: ${appEndpoint}"
             exit 1
           fi
-      - name: Delete all Azure resources
-        id: delete-resources-in-group
-        if: ${{ (github.event_name == 'workflow_dispatch' && inputs.deleteAzureResources) || (github.event_name == 'repository_dispatch' && github.event.client_payload.deleteAzureResources) }}
-        uses: azure/CLI@v1
-        with:
-          azcliversion: ${{ env.azCliVersion }}
-          inlineScript: |
-            az group delete -n ${{ env.testResourceGroup }} --yes
-            az ad app delete --id ${clientId}
       - name: Generate artifact file name and path
         id: artifact_file
         run: |
@@ -181,3 +172,27 @@ jobs:
             else
                 echo "Job integration-test succeeded."
             fi
+
+  delete-resources:
+    needs: notification
+    runs-on: ubuntu-latest
+    if: always()
+    steps:
+      - uses: azure/login@v1
+        id: azure-login
+        with:
+          creds: ${{ env.azureCredentials }}
+      - name: Checkout ${{ env.repoName }}
+        uses: actions/checkout@v2
+        with:
+          path: ${{ env.repoName }}
+          ref: ${{ github.event.inputs.ref }}
+      - name: Delete all Azure resources
+        id: delete-resources-in-group
+        if: ${{ (github.event_name == 'workflow_dispatch' && inputs.deleteAzureResources) || (github.event_name == 'repository_dispatch' && github.event.client_payload.deleteAzureResources) }}
+        uses: azure/CLI@v1
+        with:
+          azcliversion: ${{ env.azCliVersion }}
+          inlineScript: |
+            az group delete -n ${{ env.testResourceGroup }} --yes
+            az ad app delete --id ${clientId}
