Refactor Azure resource deletion logic and improve readability.

--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -188,11 +188,10 @@ jobs:
           path: ${{ env.repoName }}
           ref: ${{ github.event.inputs.ref }}
       - name: Delete all Azure resources
-        id: delete-resources-in-group
+        id: delete-resources
         if: ${{ (github.event_name == 'workflow_dispatch' && inputs.deleteAzureResources) || (github.event_name == 'repository_dispatch' && github.event.client_payload.deleteAzureResources) }}
-        uses: azure/CLI@v1
-        with:
-          azcliversion: ${{ env.azCliVersion }}
-          inlineScript: |
+        run: |
+            echo "delete resource group: " ${{ env.testResourceGroup }}
             az group delete -n ${{ env.testResourceGroup }} --yes
+            echo "delete app with clientId: " ${clientId}
             az ad app delete --id ${clientId}
