Update default value to true for offer artifact in workflow package.yaml.

--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -8,7 +8,7 @@ on:
         description: 'Update offer artifact'
         required: true
         type: boolean
-        default: false
+        default: true
   # Allows you to run this workflow using GitHub APIs
   # PERSONAL_ACCESS_TOKEN=<GITHUB_PERSONAL_ACCESS_TOKEN>
   # REPO_NAME=WASdev/azure.liberty.aro
