Update description for Partner Center credentials with markdown formatting.  Update guidance to reflect new way of setting secrets

--- a/.github/resource/credentials-params.yaml
+++ b/.github/resource/credentials-params.yaml
@@ -2,13 +2,13 @@
 # Copyright (c) Microsoft Corporation.
 - name: CLIENT_ID
   value: ""
-  description: Client ID for an Azure AD application registered in the Partner Center
+  description: Client ID for an Azure AD application registered in the **Partner Center**
 - name: SECRET_VALUE
   value: ""
-  description: Secret value of the Azure AD application registered in the Partner Center
+  description: Secret value of the Azure AD application registered in the **Partner Center**
 - name: TENANT_ID
   value: ""
-  description: Tenant ID of the Azure AD application registered in the Partner Center
+  description: Tenant ID of the Azure AD application registered in the **Partner Center**
 - name: USER_NAME
   value: ""
   description: User name of GitHub account
