Add MacOS base64 encoding note and role assignment for SP creation.

--- a/.github/resource/credentials-params.yaml
+++ b/.github/resource/credentials-params.yaml
@@ -14,7 +14,8 @@
   description: User name of GitHub account
 # The base64 encoded pull secret text.
 # See https://learn.microsoft.com/en-us/azure/openshift/tutorial-create-cluster?WT.mc_id=Portal-fx#get-a-red-hat-pull-secret-optional to obtain the pull secret from the Red Hat OpenShift Cluster Manager website.
-# Run "echo '<pull-secret-text>' | base64 -w0" to encode the pull secret.
+# Run "echo '<pull-secret-text>' | base64 -w0" to encode the pull secret for Linux.
+# Run "echo '<pull-secret-text>' | base64" to encode the pull secret for MacOS.
 - name: PULL_SECRET_ENCODED
   value: ""
   description: The base64 encoded pull secret text.
