On branch edburns/do-not-use-aro-name modified:   pom.xml
- Fix typo.

Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <azure.apiVersion.roleAssignment>2022-04-01</azure.apiVersion.roleAssignment>
         <azure.apiVersion.userAssignedIdentities>2023-01-31</azure.apiVersion.userAssignedIdentities>
         <azure.apiVersion.vNetRoleAssignment>2024-07-01</azure.apiVersion.vNetRoleAssignment>
-        <azure.apiVersion.virtualNetworks>2024-07-01</azure.apiVersion.virtualNetworks>pt>
+        <azure.apiVersion.virtualNetworks>2024-07-01</azure.apiVersion.virtualNetworks>
         <!--Testing PID <customer.usage.attribution.id>pid-1a2a9b5a-6c82-42de-a938-9fdb6ffe8e55-partnercenter</customer.usage.attribution.id> -->
         <customer.usage.attribution.id>pid-8942a2f7-32d6-4b69-b504-4c2fb23fe059-partnercenter</customer.usage.attribution.id>
         <aro.start>acdd32ed-5fab-54b6-8d5a-097ed3dcfcf2</aro.start>
