On branch edburns/ibm-1233-get-green-badge-on-azure-javaee Your branch is up to date with 'origin/edburns/ibm-1233-get-green-badge-on-azure-javaee'.
Changes not staged for commit:
  (use "git add <file>..." to update what will be committed)
  (use "git restore <file>..." to discard changes in working directory)
	modified:   .github/workflows/integration-test.yaml

no changes added to commit (use "git add" and/or "git commit -a")

Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -32,7 +32,7 @@ on:
         description: 'Location of the Azure resources'
         required: true
         type: string
-        default: 'eastus'
+        default: 'westus3'
       configurations_for_it:
         description: "JSON string of environment variables used for IT"
         required: false
@@ -57,7 +57,7 @@ env:
   msTeamsWebhook: ${{ secrets.MSTEAMS_WEBHOOK }}
   testResourceGroup: libertyAroTestRG-${{ github.repository_owner }}-${{ github.run_id }}-${{ github.run_number }}
   testDeploymentName: libertyAroTestDeployment-${{ github.run_id }}-${{ github.run_number }}
-  location: ${{ github.event.inputs.location || 'eastus' }}
+  location: ${{ github.event.inputs.location || 'westus3' }}
 jobs:
   integration-test:
     runs-on: ubuntu-latest
